sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: ')' expected but ',' found.
				if(i+1,i){
                                      ^AlgCocktailSort2:14: error: illegal start of simple expression
		}
                ^AlgCocktailSort2:16: error: ')' expected but ',' found.
			if(i+1,i){
                              ^AlgCocktailSort2:21: error: illegal start of simple expression
		}
                ^