sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var debut:Int = 0
	var fin:Int = getNombreValeurs()-2
	var swapped = true
	while (swapped) {
	swapped = false
		for(i <- debut to fin) {
				if(i+1,i){
				echange(i+1,i)
				fin -= 1	
				swapped=true
				}
		}
		for( i <- fin to debut by -1){
			if(i+1,i){
			echange(i+1,i)
			fin += fin	
			swapped = true
			}
		}
		
	}



	
}

